force-app/main/default/objects/Exceptions__c/Exceptions__c.object-meta.xml
<CustomObject>
    <label>Exceptions</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Exception No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>