force-app/main/default/objects/Exceptions__c/fields/API_CalloutRequestBody__c.field-meta.xml
<CustomField>
    <fullName>API_CalloutRequestBody__c</fullName>
    <label>API CalloutRequestBody</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>