force-app/main/default/objects/Exceptions__c/fields/API_CalloutResponseBody__c.field-meta.xml
<CustomField>
    <fullName>API_CalloutResponseBody__c</fullName>
    <label>API CalloutResponseBody</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>