force-app/main/default/objects/Exceptions__c/fields/API_JSON_body__c.field-meta.xml
<CustomField>
    <fullName>API_JSON_body__c</fullName>
    <label>API JSON body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>