force-app/main/default/objects/Exceptions__c/fields/Error_Line_No__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_No__c</fullName>
    <label>Error Line No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>