force-app/main/default/objects/Exceptions__c/fields/Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace__c</fullName>
    <label>Error Stack Trace</label>
    <type>TextArea</type>
</CustomField>